--- a/trunk/src/pages/index-ce.html
+++ b/trunk/src/pages/index-ce.html
@@ -26,7 +26,10 @@
 	<script src="//192.168.1.251/fed/web-cdn/js/mobx-react/3.5.8/index.js"></script>
 	<script src="//192.168.1.251/fed/web-cdn/js/mobx-react-devtools/4.2.9/index.js"></script>
 
-	<!--<script src="//192.168.1.251/fed/web-cdn/js/ccwork-cs/0.0.1/tree/tree-icon.js"></script>-->
+	<script src="./icon/iconfont.js"></script>
+	<script src="./tree.js"></script>
+	<script src="./tree.css"></script>
+	
 	<script src="./tool-tree.js"></script>
 	
 	<!--<script src="./main.js"></script>-->
