--- a/trunk/src/pages/index.html
+++ b/trunk/src/pages/index.html
@@ -9,19 +9,76 @@
 </head>
 <body>
 	
-	<div id="app-main"></div>
+	<div id="app-main">
+		<style>
+			html[data-dpr] .cup-main {
+				opacity: 0;
+			}
+			
+			.cup-main{
+				position: absolute;
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+				height: 3px;
+				top:0;
+				left: 0;
+				background: #4EFCFF;
+				width: 100%;
+				overflow: hidden;
+			}
+			.cup-main::after{
+				content: '';
+				background: linear-gradient(-90deg, #4EFCFF, #459EF2, #4EFCFF);
+				animation: fader 2s infinite linear;
+				width: 100%;
+				height: 100%;
+				position: absolute;
+			}
+			@keyframes fader {
+				0% { 
+					transform: translateX(-100%);
+				}
+				100% {
+					transform: translateX(100%);
+				}
+			}
+		</style>
+		<div class="cup-main"></div>
+	</div>
 
 	<script src="./systemjs/system.js"></script>
 	<script>
-		SystemJS.config({
-			 meta: {
-				'*.js': {
-					format: 'global',
-					scriptload: true
-				}
-			 }
-		}); 
-		SystemJS.import('<%= htmlWebpackPlugin.options.configJs %>');
+		var SystemJSConfigMain = <%= JSON.stringify(htmlWebpackPlugin.files.chunks) %>;
+		(function(){
+			var config = <%= (() => {
+				let hash = '';
+				let r = {
+					meta: {
+						'*': {
+							format: 'global',
+							scriptload: true
+						}
+					},
+					map: {
+
+					}
+				};
+				
+				_.forEach(htmlWebpackPlugin.files.chunks, (item, key) =>{
+					var _key = '_' + key;
+					r.map[_key] = item.entry + '?' + item.hash;
+					hash += item.hash;
+				});
+				return JSON.stringify({
+					hash: hash,
+					r:r
+				});
+			})() %>;
+			SystemJS.config(config.r);
+		
+			SystemJS.import('_config');
+		})();
 	</script>
 
 </body>
