模拟数据等使用

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -47,7 +47,7 @@
 		</style>
 		<div class="cup-main"></div>
 	</div>
-
+	<div id="app-main2"></div>
 	<script src="./systemjs/system.js"></script>
 	<script>
 		var fedBuildDate = '<%= `${new Date()}` %>';
